       whole application. (Stefan)
- ADD: Merging of two instead of just one URL. (Stefan)
- ADD: Paths with short filenames now work too when
       starting TortoiseProc from external programs. (Stefan)
- ADD: Comparing an older revision with the working copy
       on folders. TME is started for this in patch mode
       to avoid "ugly" unified diffs. (Stefan)
- CHG: The locatorbar in TME shows the current view range
       with a blue background for better indication. (Stefan)
- CHG: When showing the log in the merge dialog, it will
       stop on the first copy. (Stefan)
- CHG: The check for newer versions of TSVN is now
       done in the background. The dialog only shows
       up if a newer version is actually found. (Stefan)
- CHG: Creating a patch is now possible from single files
       too and not just folders. (Stefan)
- CHG: when setting properties fails, the error message
       is shown and not dropped as before. (Stefan)
- CHG: Don't use the %APPDATA% env but the shell API to
       get the path to the config file in the settings
       dialog. (Stefan)
- BUG: TortoiseMerge could save merges to the wrong file
       if the app wasn't quit between diffs/merges. (Stefan)
- BUG: The context menu key didn't work in the
       repository browser. (Stefan)
- BUG: TSVN could crash if a revprop did not exist. (Stefan)
- BUG: Newlines weren't shown correctly when editing
       the revprops. (Stefan)
- BUG: The default settings for the icon overlays weren't
       shown in the settings dialog. (Stefan)

Version 1.0.6
- ADD: A warning is shown if a file with local modifications
       should be removed. (Stefan)
- ADD: Changing of log-messages and author of any revision
       is possible from the log dialog - if the server has
       the required hooks set up to change revprops. (Stefan)
- ADD: Document the command line params of TSVN. (Stefan)
- ADD: The add and revert command can now be cancelled
       during operation. (Stefan)