@@ -41,6 +41,7 @@ CSetMainPage::CSetMainPage()
 	, m_bDiffBar(FALSE)
 	, m_bStrikeout(FALSE)
 	, m_bReloadNeeded(FALSE)
+	, m_bResolve(FALSE)
 {
 	m_regLanguage = CRegDWORD(_T("Software\\TortoiseMerge\\LanguageID"), 1033);
 	m_regBackup = CRegDWORD(_T("Software\\TortoiseMerge\\Backup"));
@@ -53,7 +54,7 @@ CSetMainPage::CSetMainPage()
 	m_regMagnifier = CRegDWORD(_T("Software\\TortoiseMerge\\Magnifier"), TRUE);
 	m_regDiffBar = CRegDWORD(_T("Software\\TortoiseMerge\\DiffBar"), TRUE);
 	m_regStrikeout = CRegDWORD(_T("Software\\TortoiseMerge\\StrikeOut"), TRUE);
-
+	m_regResolve = CRegDWORD(_T("Software\\TortoiseMerge\\Resolve"), FALSE);
 	m_regFontName = CRegString(_T("Software\\TortoiseMerge\\LogFontName"), _T("Courier New"));
 	m_regFontSize = CRegDWORD(_T("Software\\TortoiseMerge\\LogFontSize"), 10);
 
@@ -68,6 +69,7 @@ CSetMainPage::CSetMainPage()
 	m_bMagnifier = m_regMagnifier;
 	m_bDiffBar = m_regDiffBar;
 	m_bStrikeout = m_regStrikeout;
+	m_bResolve = m_regResolve;
 }
 
 CSetMainPage::~CSetMainPage()
@@ -92,6 +94,7 @@ void CSetMainPage::DoDataExchange(CDataExchange* pDX)
 	DDX_Check(pDX, IDC_MAGNIFIER, m_bMagnifier);
 	DDX_Check(pDX, IDC_DIFFBAR, m_bDiffBar);
 	DDX_Check(pDX, IDC_STRIKEOUT, m_bStrikeout);
+	DDX_Check(pDX, IDC_RESOLVE, m_bResolve);
 }
 
 void CSetMainPage::SaveData()
@@ -109,6 +112,7 @@ void CSetMainPage::SaveData()
 	m_regMagnifier = m_bMagnifier;
 	m_regDiffBar = m_bDiffBar;
 	m_regStrikeout = m_bStrikeout;
+	m_regResolve = m_bResolve;
 }
 
 BOOL CSetMainPage::OnApply()
@@ -141,6 +145,7 @@ BOOL CSetMainPage::OnInitDialog()
 	m_bMagnifier = m_regMagnifier;
 	m_bDiffBar = m_regDiffBar;
 	m_bStrikeout = m_regStrikeout;
+	m_bResolve = m_regResolve;
 
 	UINT uRadio = IDC_WSIGNORELEADING;
 	switch (m_nIgnoreWS)
@@ -227,6 +232,7 @@ BEGIN_MESSAGE_MAP(CSetMainPage, CPropertyPage)
 	ON_BN_CLICKED(IDC_MAGNIFIER, OnBnClickedMagnifier)
 	ON_BN_CLICKED(IDC_DIFFBAR, OnBnClickedDiffbar)
 	ON_BN_CLICKED(IDC_STRIKEOUT, OnBnClickedStrikeout)
+	ON_BN_CLICKED(IDC_RESOLVE, OnBnClickedResolve)
 	ON_EN_CHANGE(IDC_TABSIZE, OnEnChangeTabsize)
 	ON_CBN_SELCHANGE(IDC_LANGUAGECOMBO, OnCbnSelchangeLanguagecombo)
 	ON_CBN_SELCHANGE(IDC_FONTSIZES, OnCbnSelchangeFontsizes)
@@ -278,6 +284,11 @@ void CSetMainPage::OnBnClickedDiffbar()
 }
 
 void CSetMainPage::OnBnClickedStrikeout()
+{
+	SetModified();
+}
+
+void CSetMainPage::OnBnClickedResolve()
 {
 	SetModified();
 }
