@@ -72,6 +72,8 @@ protected:
 	CRegDWORD		m_regDiffBar;
 	BOOL			m_bStrikeout;
 	CRegDWORD		m_regStrikeout;
+	BOOL			m_bResolve;
+	CRegDWORD		m_regResolve;
 	
 	CRegDWORD		m_regFontSize;
 	DWORD			m_dwFontSize;
@@ -97,4 +99,5 @@ protected:
 	afx_msg void OnBnClickedMagnifier();
 	afx_msg void OnBnClickedDiffbar();
 	afx_msg void OnBnClickedStrikeout();
+	afx_msg void OnBnClickedResolve();
 };
