@@ -483,6 +483,6 @@
 	<Globals>
 		<Global
 			Name="RESOURCE_FILE"
-			Value="\Development\Subversion\TortoiseSVN\src\Languages\TortoiseMergeENG.rc"/>
+			Value="\Development\Svn\TortoiseSVN\src\Languages\TortoiseMergeENG.rc"/>
 	</Globals>
 </VisualStudioProject>
